# 42sh

./: .gitignore  AUTHORS  CMakeLists.txt  README  TODO
doc/: 42sh.1  Doxyfile
includes/: README  ast.h  ast_exec.h  ast_printer.h  lexer.h  options.h  parser.h  parser_1.h  parser_2.h  parser_3.h  parser_4.h  struct.h
src/: 42sh.1  Doxyfile  ast.c  ast.h  ast_exec.c  ast_exec.h  ast_printer.c  ast_printer.h  ast_printer.h.gch  input_handler.c  input_handler.h  lexer.c  lexer.h  lexor.c  lexor.h  options.c  options.h  parser.c  parser.h  parser_1.c  parser_1.h  parser_2.c  parser_2.h  parser_3.c  parser_3.h  parser_4.c  parser_4.h  prompt.c  struct.c  struct.h
src/exec/: and_or.c  ast_exec.c  ast_exec.h  exec_simple_command.c  input.c  list.c  pipeline.c  rule_case.c  rule_for.c  rule_if.c  rule_until.c  rule_while.c  simple_cmd.c
src/lexer/: lexer.c
src/options/: options.c
src/parser/: parser.c  parser_1.c  parser_2.c  parser_3.c  parser_4.c
src/print/: ast_printer.c
src/utilities/: ast.c  struct.c
tests/: Gemfile  Makefile  autobundler.sh  options.c  simple_cmd.c  tests.rb  testsuite.rb
tests/cmains/: create_hard_ast.c  create_hard_ast.h  main.c  simple_cmd.c
tests/inputs/: and_or.json  general.json  general_2.json  general_3.json  simple_cmd.json
tests/testsuite/: tests.rb
